* Criação de funções para ativação de link. * Ajustes de layout.

--- a/public/sobre/index.html
+++ b/public/sobre/index.html
@@ -13,7 +13,7 @@
       <header>
   <div class="brand">
     <h1>
-      <img src="img/felipeassis.jpg" alt="Avatar" class="my-avatar">
+      <img src="/img/felipeassis.jpg" alt="Avatar" class="my-avatar">
       Felipe Assis
     </h1>
   </div>
@@ -63,6 +63,9 @@
   </div>
 </footer>
 
-    <script src="js/app.js"></script>
+    <script src="/js/app.js"></script>
+    <script>
+      setActiveLink();
+    </script>
   </body>
 </html>
